Removed some import and add some comments, fix SQL

--- a/webprogramming-phase3/Node.js/.env
+++ b/webprogramming-phase3/Node.js/.env
@@ -1,6 +1,6 @@
 PORT=3306
 
 MYSQL_HOST=localhost
-MYSQL_USERNAME=root
-MYSQL_PASSWORD=@jS2c^l936mAk$!
+MYSQL_USERNAME=projp3
+MYSQL_PASSWORD=projp3
 MYSQL_DATABASE=web_project
